objects/Customer_Commitment__c.object
<CustomObject>
    <fields>
        <fullName>Commitment_Description__c</fullName>
        <label>Commitment Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Commitment_Owner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Commitment Owner</label>
        <referenceTo>Core_Team_Member__c</referenceTo>
        <relationshipLabel>Customer Commitment</relationshipLabel>
        <relationshipName>Customer_Commitment</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>Commitment_Owner__r.User__r.Last_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <label>Project ID</label>
        <referenceTo>Offering_Release__c</referenceTo>
        <relationshipLabel>Customer Commitment</relationshipLabel>
        <relationshipName>Customer_Commitment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Customer Commitment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CC-{0000000000}</displayFormat>
        <label>Customer Commitment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Commitment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>